style select, fix action bar spacing, restyle search bar, hide for mobile

--- a/scss/gallery-filters.scss
+++ b/scss/gallery-filters.scss
@@ -13,9 +13,32 @@
 }
 
 @mixin box-shadow {
-	box-shadow: 0 2px 10px #D9DFF0;
-	-moz-box-shadow: 0 2px 10px #D9DFF0;
-	-webkit-box-shadow: 0 2px 10px #D9DFF0;
+	box-shadow: 0 2px 20px #D9DFF0;
+	-moz-box-shadow: 0 2px 20px #D9DFF0;
+	-webkit-box-shadow: 0 2px 20px #D9DFF0;
+}
+
+@mixin transition {
+	transition: all 300ms ease;
+}
+
+// Responsive Mixins
+@mixin desktop {
+	@media (min-width: 1024px) {
+		@content;
+	}
+}
+
+@mixin tablet {
+	@media (min-width: 768px) and (max-width: 1024px) {
+		@content;
+	}
+}
+
+@mixin mobile {
+	@media (min-width: 576px) and (max-width: 768px) {
+		@content;
+	}
 }
 
 
@@ -32,6 +55,7 @@ $red:		   #E43B44;
 .gallery__action-bar {
 	display: flex;
 	align-items: center;
+	margin-bottom: 28px;
 }
 
 .gallery__action-bar-left {
@@ -53,15 +77,22 @@ $red:		   #E43B44;
     		padding-right: 0 !important;
     	}
 
-    	&#sort-by:before {
-    		content: "Sort by:";
-    		font-size: 12px;
-    	}
+		// add labels
+    	// &#sort-by:before {
+    	// 	content: "Sort by:";
+    	// 	font-size: 12px;
+    	// }
 
-    	&#solution-filter:before {
-    		content:"Solutions:";
-    		font-size: 12px;
-    	}
+    	// &#solution-filter:before {
+    	// 	content:"Solutions:";
+    	// 	font-size: 12px;
+    	// }
+
+    	// &#search-bar:before {
+    	// 	content:".";
+    	// 	font-size: 12px;
+    	// 	color: #fff;
+    	// }
 
     	select {
     		height: 2.3125rem;
@@ -87,6 +118,8 @@ $red:		   #E43B44;
     background-position: 12px 8px;
     background-size: auto 55%;
     text-indent: 35px;
+    height: 40px;
+    line-height: 40px;
     box-shadow: none;
     border-color: $border-color;
 
@@ -117,7 +150,6 @@ $red:		   #E43B44;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	border-bottom: 1px solid $border-color;
 	padding: 10px 20px;
 	font-weight: bold;
 
@@ -140,7 +172,7 @@ $red:		   #E43B44;
 .gallery__filter-card--body {
 
 	padding: 0 20px 14px;
-	
+	border-top: 1px solid $border-color;
 	form {
 		// overrides default styling
 		@include form-override;
@@ -166,11 +198,45 @@ $red:		   #E43B44;
 		width: 31%;
 		margin-bottom: 20px;
 		border-radius: 3px;
-		@include box-shadow;
+
+		&:hover {
+			cursor: pointer;
+			@include box-shadow;
+		}
+   		//add animation for borders on hover
+		&:before, &:after {
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			transition: opacity .38s ease-in-out, transform .35s ease-in-out;
+			content: '';
+			opacity: 0;
+			pointer-events: none;
+		}
+
+		&:before {
+			transform: scale3d(0, 1, 1);
+			transform-origin: left top;
+			border-top: 1px solid $red;
+			border-bottom: 1px solid $red;
+		}
+
+		&:after {
+			transform: scale3d(1, 0, 1);
+			transform-origin: right top;
+			border-right: 1px solid $red;
+			border-left: 1px solid $red;
+		}
+
+		&:hover::before, &:hover::after, &:focus::before, &:focus::after {
+			transform: scale3d(1, 1, 1);
+			opacity: 1;
+		}
 	}
 
 	.gallery__img--background {
-		background: url(https://source.unsplash.com/random);
 		background-size: cover;
 		height: 210px;
 	}
@@ -198,4 +264,179 @@ $red:		   #E43B44;
 			opacity: .23;
 		}
 	}
+}
+
+
+// Select Styling - jQuery Nice Select 
+
+// variables 
+$font_size: 14px !default;
+$font_size_small: 12px !default;
+
+$input_border_radius: 3px !default;
+$input_height: 42px !default;
+$input_height_small: 36px !default;
+$dropdown_padding: 18px !default;
+
+$gray_dark: #444 !default;
+$gray: #222 !default;
+$gray_light: #e8e8e8 !default;
+$gray_lighter: #F0F2F8 !default;
+$primary_light: $gray !default;
+$arrow_color: $gray !default;
+
+// Style the dropdown
+.nice-select {
+  // -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: #fff;
+  font-weight: bold;
+  border-radius: $input_border_radius;
+  border: solid 1px $border-color; 
+  box-sizing: border-box;
+  clear: both;
+  cursor: pointer;
+  display: block;
+  font-family: inherit;
+  font-size: $font_size;
+  font-weight: normal;
+  height: $input_height;
+  line-height: $input_height - 2;
+  outline: none;
+  padding-left: $dropdown_padding;
+  padding-right: $dropdown_padding + 12;
+  position: relative;
+  text-align: left !important;
+  transition: all 0.2s ease-in-out;
+  user-select: none;
+  white-space: nowrap;
+  width: auto;
+  &:hover {
+    border-color: darken($border-color, 5%);
+  }
+  &:active, &:focus {
+    border-color: $primary_light;
+  }
+  // Arrow
+  &:after { 
+   border-bottom: 3px solid $red;
+    border-right: 3px solid $red;
+    content: '';
+    display: block;
+    height: 8px;
+    margin-top: -4px;
+    pointer-events: none;
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform-origin: 66% 66%;
+    transform: rotate(45deg);
+    transition: all .15s ease-in-out;
+    width: 8px;
+  }
+  
+  &.open {
+    @extend :active;
+    &:after {
+      transform: rotate(-135deg);
+    }
+    .list {
+      opacity: 1;
+      pointer-events: auto;
+      transform: scale(1) translateY(0);
+    }
+  }
+  &.disabled {
+    border-color: lighten($gray_light, 2%);
+    color: $gray;
+    pointer-events: none;
+    &:after { 
+      border-color: lighten($arrow_color, 20%);
+    }
+  }
+  
+  // Modifiers
+  &.wide {
+    width: 100%;
+    .list {
+      left: 0 !important;
+      right: 0 !important;
+    }
+  }
+  &.right {
+    float: right;
+    .list {
+      left: auto;
+      right: 0;
+    }
+  }
+  &.small {
+    font-size: $font_size_small;
+    height: $input_height_small;
+    line-height: $input_height_small - 2;
+    &:after { 
+      height: 4px;
+      width: 4px;
+    }
+    .option {
+      line-height: $input_height_small - 2;
+      min-height: $input_height_small - 2;
+    }
+  }
+  
+  // List and options
+  .list {
+    background-color: #fff;
+    border-radius: $input_border_radius;
+    box-shadow: 0 0 0 1px rgba($gray_dark, .11);
+    box-sizing: border-box;
+    margin-top: 4px;
+    opacity: 0;
+    overflow: hidden;
+    padding: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 100%; left: 0;
+    transform-origin: 50% 0;
+    transform: scale(.75) translateY(- $input_height / 2);
+    transition: all .2s cubic-bezier(0.5, 0, 0, 1.25), opacity .15s ease-out;
+    z-index: 9;
+    &:hover .option:not(:hover) {
+      background-color: transparent !important;
+    }
+  }
+  .option {
+    cursor: pointer;
+    font-weight: 400;
+    line-height: $input_height - 2;
+    list-style: none;
+    min-height: $input_height - 2;
+    outline: none;
+    padding-left: $dropdown_padding;
+    padding-right: $dropdown_padding + 11;
+    text-align: left;
+    transition: all 0.2s;
+    &:hover, &.focus, &.selected.focus { 
+      background-color: $gray_lighter;
+    }
+    &.selected { 
+      font-weight: bold;
+    }
+    &.disabled {
+      background-color: transparent;
+      color: $gray;
+      cursor: default;
+    }
+  }
+}
+
+// Use display instead of opacity for IE <= 10
+.no-csspointerevents .nice-select {
+  .list {
+    display: none;
+  }
+  &.open {
+    .list {
+      display: block;
+    }
+  }
 }
